<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.uniquindio.android.electiva.monitorsara.util.dialogoDeConfirmacion">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="231dp"
        android:layout_marginLeft="37dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="128dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="231dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="352dp"
        android:layout_height="149dp"
        android:text="@string/Mensaje_dialogo"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="59dp" />
</android.support.constraint.ConstraintLayout>
