<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="6dp"
    app:cardBackgroundColor="@color/colorCielo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:onClick="pasarAInformacionCita">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombrecita"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/Cita"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/numerocita"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/numeral"
                android:textSize="30dp"

                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/alerta" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:background="@color/colorCielo"
            android:text=""
            android:onClick="pasarAInformacionCita"/>

        <TextView
            android:id="@+id/fechacita"
            android:layout_width="231dp"
            android:layout_height="29dp"
            android:text="@string/fecha_de_muestra" />

    </LinearLayout>


</android.support.v7.widget.CardView>