<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.uniquindio.android.electiva.monitorsara.Login_activity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_hola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        app:hintTextAppearance="@style/Hint"
        android:layout_centerVertical="false"
        >

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_usser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/Hint"
        app:counterTextAppearance="@style/Hint"
        android:transformPivotY="100dp"
        android:transformPivotX="100dp"
        android:layout_above="@+id/input_layout_password"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp">
        <EditText
            android:id="@+id/input_usser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/input_layout_hola"
            android:layout_marginTop="55dp"
            android:layout_weight="1"
            android:hint="@string/user_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/Hint"
        android:transformPivotY="100dp"
        android:transformPivotX="100dp"

        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:hint="@string/user_pass" />


    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="@color/colorCielo"
        android:text="@string/ingresar_login"
        android:textColor="@color/colorBlanco"
        android:textSize="50dp" />




</RelativeLayout>
